--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,22 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
 
   "name": "Netflix Movie Reviews",
-  "description": "This extension will show ratings from rotten tomatoes and imdb as well as show reviews from rotten tomatoes when they hover over a title on netflix.com.",
+  "description": "This extension will show ratings from imdb whenever you hover over a title on streaming sites like Netflix, Hulu, Max, etc.",
   "version": "1.0",
 
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "extension.html"
+  },
 
   "content_scripts": [
     {
-      "matches": ["https://www.netflix.com/*"],
+      "matches": [
+        "https://play.max.com/*",
+        "https://www.netflix.com/*",
+        "https://www.hulu.com/*"
+      ],
 
       "js": ["script.js"]
     }
